<resources>
    <string name="app_name">EasyPermissions</string>
    <string name="label_permission_network">网络访问</string>
    <string name="label_permission_network_desc">用于即时通讯传输</string>
    <string name="label_permission_read">读取文件</string>
    <string name="label_permission_read_desc">用于设置头像与发送图片</string>
    <string name="label_permission_takePhoto">调用相机</string>
    <string name="label_permission_takePhoto_desc">用于拍照上传图片</string>
    <string name="label_permission_write">写外部文件</string>
    <string name="label_permission_write_desc">用于OSS日志存储</string>
    <string name="label_permission_record_audio">麦克风</string>
    <string name="label_permission_record_audio_desc">用于音频聊天</string>
    <string name="label_permission_submit">授权</string>
    <string name="label_permission_ok">授权成功！</string>

</resources>
