<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:textAlignment="center"
            app:title="授予权限"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:titleTextColor="#4e5864" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_network"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_permission_network_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/textSecond"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/im_state_permission_network"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_done"
                    android:tint="@color/colorAccent" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_takePhoto"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_permission_takePhoto_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/textSecond"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/im_state_permission_takePhoto"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_done"
                    android:tint="@color/colorAccent" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_read"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_permission_read_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/textSecond"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/im_state_permission_read"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_done"
                    android:tint="@color/colorAccent" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_write"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_permission_write_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/textSecond"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/im_state_permission_write"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_done"
                    android:tint="@color/colorAccent" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_record_audio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_permission_record_audio_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/textSecond"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/im_state_permission_record_audio"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_done"
                    android:tint="@color/colorAccent" />
            </FrameLayout>

            <net.qiujuer.genius.ui.widget.Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/len_172"
                android:layout_height="@dimen/len_44"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/len_48"
                android:layout_marginTop="@dimen/len_48"
                android:background="@drawable/sel_btn_bg_accent_44"
                android:gravity="center"
                android:text="@string/label_permission_submit"
                android:textColor="@color/white"
                app:gTouchColor="@color/white_alpha_48"
                app:gTouchCornerRadius="22dp"
                app:gTouchEffect="ripple" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>